--- a/src/assets/styles/Tuto.css
+++ b/src/assets/styles/Tuto.css
@@ -23,7 +23,57 @@
     padding-right: 4rem;
 }
 
-     .app-container {
+     /* .app-container {
+        position: relative;
+        width: 100vw;
+        height: 100vh;
+        overflow: hidden;
+      }
+      
+      .video-container,
+      .code-editor-container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transition: opacity 0.3s ease;
+        opacity: 0;
+      }
+      
+      .video-container.active,
+      .code-editor-container.active {
+        opacity: 1;
+        z-index: 2;
+      }
+   
+      .play-video-button,
+      .toggle-editor-button {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: rgba(0, 0, 0, 0.5);
+        color: #fff;
+        padding: 10px 20px;
+        border: none;
+        cursor: pointer;
+      }
+      
+      .code-editor-container {
+        z-index: 1; 
+      }
+ 
+      .controls {
+        position: absolute;
+        bottom: 20px; 
+        left: 20px; 
+        display: flex;
+        gap: 10px;
+        z-index: 100; 
+      }
+       */
+       .app-container {
         position: relative;
         width: 100vw;
         height: 100vh;
@@ -47,10 +97,6 @@
         z-index: 2;
       }
       
-      .video-container {
-        background-color: #000;
-      }
-      
       .play-video-button,
       .toggle-editor-button {
         position: absolute;
@@ -62,22 +108,28 @@
         padding: 10px 20px;
         border: none;
         cursor: pointer;
+        z-index: 3; 
       }
       
       .code-editor-container {
-        z-index: 1; 
+        z-index: 1;
       }
       
-      .toggle-editor-button {
+      .controls {
         position: absolute;
-        top: 10px;
-        right: 10px;
-        background-color: #3182ce;
-        color: #fff;
-        padding: 8px 16px;
-        border: none;
-        cursor: pointer;
-        z-index: 100;
+        bottom: 20px;
+        left: 20px;
+        display: flex;
+        gap: 10px;
+        z-index: 10; 
       }
-       
-    
+   
+  
+      .active_controls{
+        position: absolute;
+        left:35px;
+        display: flex;
+        gap: 10px;
+        z-index: 10; 
+      }
+     
