--- a/src/assets/styles/Tuto.css
+++ b/src/assets/styles/Tuto.css
@@ -132,4 +132,87 @@
         gap: 10px;
         z-index: 10; 
       }
-     
+      .Tutorial_container {
+        width: 30%;
+        background-color: #a96108;
+        padding: 0.5rem;
+        border-radius: 1.2rem;
+    }
+    
+    .Tutorials_container {
+        margin-left: 10rem;
+        display: flex;
+        gap: 2rem;
+        flex-wrap: wrap;
+    }
+    
+    .Tutorial_paragraph {
+        font-family: "Open Sans", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 1.5rem;
+        color: #ffffff;
+        margin-left: 1rem;
+        letter-spacing: 0.15rem;
+    }
+    
+    .video-wrapper {
+        position: relative;
+        display: block;
+        border-radius: 1rem;
+        overflow: hidden;
+    }
+    
+    video {
+        display: block;
+        width: 100%;
+        height: auto;
+        border-radius: 1rem;
+    }
+    
+    .video-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: end;
+        align-items: end;
+        pointer-events: none;  
+    }
+    
+    .overlay-shape {
+        background-color: #a96108;
+       
+        color: white;
+        padding: 10px;
+        border-top-left-radius: 5px;
+    
+        text-align: center;
+    }
+    
+     /* .Tutorial_container {
+
+      width: 30%;
+      background-color: #a96108;
+      padding: 0.5rem;
+      border-radius: 1.2rem;
+   
+    }
+    
+    .Tutorials_container{
+      margin-left: 10rem;
+      display: flex;
+      gap: 2rem;
+      flex-wrap: wrap;
+    }
+    .Tutorial_paragraph{
+      font-family: "Open Sans", sans-serif;
+      font-weight: 400;
+      font-style: normal;
+      font-size: 1.5rem;
+      color: #ffffff;
+      margin-left: 1rem;
+      letter-spacing: 0.15rem;
+    } */
